whatsapp chat link

--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -6,5 +6,6 @@
     <string name="rafik_phone_number">+201093111955</string>
     <string name="you_need_an_organic_fertilizer">تحتاج سماد عضوي</string>
     <string name="producing_an_organic_product_or_selling_it">تريد انتاج منتج عضوي / او بيعه</string>
+    <string name="contact_us">تواصل معنا</string>
 
 </resources>
