--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="rafik_phone_number">+201093111955</string>
     <string name="you_need_an_organic_fertilizer">you need an organic fertilizer</string>
     <string name="producing_an_organic_product_or_selling_it">Producing or selling an organic product</string>
+    <string name="contact_us">Contact us</string>
 </resources>
