--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,24 @@
     <string name="you_need_an_organic_fertilizer">you need an organic fertilizer</string>
     <string name="producing_an_organic_product_or_selling_it">Producing or selling an organic product</string>
     <string name="contact_us">Contact us</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="sign_up">SIGN UP</string>
+    <string name="username">Username</string>
+    <string name="registration">Registration</string>
+    <string name="todo">TODO</string>
+    <string name="city">City</string>
+    <string name="area">Area</string>
+    <string name="address">Address</string>
+    <string name="phone">Phone</string>
+    <string name="bias1">1.0</string>
+    <string name="bias0">0.0</string>
+    <string name="enter_your_name">Enter your Name</string>
+    <string name="enter_your_address">Enter your ِAddress</string>
+    <string name="enter_phone">Enter your Phone Number</string>
+    <string name="lenght_phone_check">Enter 11 num Phone </string>
+    <string name="verification_code">Verification Code</string>
+    <string name="code_sent">code sent to </string>
+    <string name="contian_11">Must Contain 11 Number</string>
+
+
 </resources>
