FireBaseRepoImpl ,new 2 entities(city,request) ,OtpAuthFrag v2 ,SignIngFragment v2 ,network handling in MainActivity ,initViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,13 @@
     <string name="code_sent">code sent to </string>
     <string name="contian_11">Must Contain 11 Number</string>
     <string name="signout">signOut</string>
+    <string name="verify_code">Verify Code</string>
+    <string name="please_enter_code">Please enter Code</string>
+    <string name="checkYourInternet">Check Your internet connection please</string>
+    <string name="send_another_code">Send another code</string>
+    <string name="yourInternetIsBack">Your Connection Is Back</string>
+    <string name="acre">Acre</string>
+    <string name="carat">Carat</string>
 
 
 </resources>
