--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -49,5 +49,13 @@
     <string name="code_sent"> تم ارسال كود لـ</string>
     <string name="contian_11">يجب ان يحتوي علي 11 رقم</string>
     <string name="signout">تسجيل خروج</string>
+    <string name="verify_code">تأكيد الكود</string>
+    <string name="please_enter_code">من فضلك ادخل الكود</string>
+    <string name="checkYourInternet">تحقق من اتصالك بالإنترنت من فضلك</string>
+    <string name="send_another_code">ارسال كود اخر</string>
+    <string name="yourInternetIsBack">تم اعاده الاتصال بالانترنت</string>
+    <string name="acre">فدان</string>
+    <string name="carat">قيراط</string>
+
 
 </resources>
