login , fixing some errors

--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -92,5 +92,10 @@
     <string name="please_fill_production_date_field">\nبرجاء إدخال تاريخ الانتاج</string>
     <string name="remove_photo">إزالة الصورة</string>
     <string name="navigate_up_confirmation">هل أنت متأكد من رغبتك في العودة\nسوف تفقد كل البيانات التي أدخلتها!</string>
+    <string name="already_have_an_account">هل لديك حساب؟</string>
+    <string name="login">تسجيل دخول</string>
+    <string name="signup">تسجيل</string>
+    <string name="join_now">انضم الان</string>
+    <string name="new_to_rafik">مستخدم جديد لـ رافق؟</string>
 
 </resources>
