--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -97,5 +97,11 @@
     <string name="signup">تسجيل</string>
     <string name="join_now">انضم الان</string>
     <string name="new_to_rafik">مستخدم جديد لـ رافق؟</string>
+    <string name="are_you_sure">هل انت متاكد من رقم</string>
+    <string name="yes">نعم</string>
+    <string name="no">لا</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
+
+
 
 </resources>
