--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -108,5 +108,8 @@
     <string name="organic_products">المنتجات العضوية</string>
     <string name="overview">نظرة عامة</string>
     <string name="home_screen">الصفحة الرئيسية</string>
+    <string name="_0">0</string>
+    <string name="you_must_enter_a_value_per_carat_or_acre">يجب ادخال قيمة للقيراط أوالفدان</string>
+    <string name="this_field_cannot_be_empty">لا يمكن ان يكون هذا العنصر فارغ</string>
 
 </resources>
