--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,9 @@
     <string name="organic_products">Organic Products</string>
     <string name="overview">Overview</string>
     <string name="home_screen">Home</string>
+    <string name="_0">0</string>
+    <string name="you_must_enter_a_value_per_carat_or_acre">You must enter a value per carat or acre</string>
+    <string name="this_field_cannot_be_empty">This field cannot be empty</string>
 
 
 </resources>
