--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -162,5 +162,7 @@
     <string name="_0">0</string>
     <string name="you_must_enter_a_value_per_carat_or_acre">يجب ادخال قيمة للقيراط أوالفدان</string>
     <string name="this_field_cannot_be_empty">لا يمكن ان يكون هذا العنصر فارغ</string>
+    <string name="request_sent_successfully">تم إرسال طلبك بنجاح</string>
+    <string name="your_request_was_not_sent_please_try_again_later">Your request was not sent, please try again later</string>
 
 </resources>
