--- a/app/src/main/res/values-ar-rEG/strings.xml
+++ b/app/src/main/res/values-ar-rEG/strings.xml
@@ -164,5 +164,7 @@
     <string name="this_field_cannot_be_empty">لا يمكن ان يكون هذا العنصر فارغ</string>
     <string name="request_sent_successfully">تم إرسال طلبك بنجاح</string>
     <string name="your_request_was_not_sent_please_try_again_later">Your request was not sent, please try again later</string>
+    <string name="this_number_is_already_registered_try_to_log_in">هذا الرقم مُسجل مسبقاً، حاول تسجيل الدخول</string>
+    <string name="this_number_is_not_registered_try_to_register">هذا الرقم غير مُسجل، حاول إنشاء حساب جديد </string>
 
 </resources>
