--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -159,6 +159,8 @@
     <string name="this_field_cannot_be_empty">This field cannot be empty</string>
     <string name="request_sent_successfully">Request sent Successfully</string>
     <string name="your_request_was_not_sent_please_try_again_later">Your request was not sent, please try again later</string>
+    <string name="this_number_is_already_registered_try_to_log_in">This number is already registered,try to log in</string>
+    <string name="this_number_is_not_registered_try_to_register">This number is not registered, try to register</string>
 
 
 </resources>
