--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -161,6 +161,8 @@
     <string name="your_request_was_not_sent_please_try_again_later">Your request was not sent, please try again later</string>
     <string name="this_number_is_already_registered_try_to_log_in">This number is already registered,try to log in</string>
     <string name="this_number_is_not_registered_try_to_register">This number is not registered, try to register</string>
+    <string name="the_verification_code_is_invalid">The verification code from SMS/TOTP is invalid, Please check and enter the correct verification code again.</string>
+    <string name="an_error_occurred_try_again_later">An error occurred, try again later</string>
 
 
 </resources>
