--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -145,7 +145,7 @@
     <string name="signup">SignUp</string>
     <string name="join_now">Join Now</string>
     <string name="new_to_rafik">New to Rafik?</string>
-    <string name="are_you_sure">Are you sure with</string>
+    <string name="are_you_sure">Are you sure about this number</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
