--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,70 +14,6 @@
     <string name="training_places">Training places</string>
     <string name="trainings">Trainings</string>
 
-    <string-array name="product_types">
-        <item>دبس رمان</item>
-        <item>دبس تمر</item>
-        <item>طماطم مجففة</item>
-        <item>بصل مجفف</item>
-        <item>ثوم مجفف</item>
-        <item>سيرب نعناع</item>
-        <item>زيت زيتون</item>
-        <item>زيت نعناع</item>
-        <item>مانجو مخللة</item>
-    </string-array>
-
-    <string-array name="training_places">
-        <item>القاهرة</item>
-        <item>الجيزة</item>
-        <item>القليوبية</item>
-        <item>الإسكندرية</item>
-        <item>البحيرة</item>
-        <item>مطروح</item>
-        <item>الساحل الشمالي</item>
-        <item>كفر الشيخ</item>
-        <item>الدقهلية</item>
-        <item>الشرقية</item>
-        <item>المنوفية</item>
-        <item>دمياط</item>
-        <item>بورسعيد</item>
-        <item>الإسماعيلية</item>
-        <item>السويس</item>
-        <item>الشيخ زايد</item>
-        <item>الفيوم</item>
-        <item>بني سويف</item>
-        <item>المنيا</item>
-        <item>أسيوط</item>
-        <item>سوهاج</item>
-        <item>قنا</item>
-        <item>أسوان</item>
-        <item>الأقصر</item>
-        <item>البحر الأحمر</item>
-        <item>الوادي الجديد</item>
-        <item>مطروح</item>
-    </string-array>
-
-
-    <string-array name="fertilizer_types">
-        <item>كمبوست سائل متوازن</item>
-        <item>كمبوست سائل عالي النيتروجين</item>
-        <item>كمبوست سائل عالي الفوسفات</item>
-        <item>كمبوست سائل عالي البوتاسيوم</item>
-        <item>كمبوست</item>
-        <item>مبيدات حيوية</item>
-    </string-array>
-
-    <string-array name="organic_crops_type">
-        <item>رمان</item>
-        <item>بلح</item>
-        <item>نعناع</item>
-        <item>بصل</item>
-        <item>ثوم</item>
-        <item>طماطم</item>
-        <item>زيتون</item>
-        <item>مانجو</item>
-    </string-array>
-
-
     <!-- TODO: Remove or change this placeholder text -->
     <string name="sign_up">SIGN UP</string>
     <string name="username">Username</string>
@@ -145,7 +81,7 @@
     <string name="signup">SignUp</string>
     <string name="join_now">Join Now</string>
     <string name="new_to_rafik">New to Rafik?</string>
-    <string name="are_you_sure">Are you sure about this number</string>
+    <string name="are_you_sure">Are you sure about this number </string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
@@ -159,10 +95,13 @@
     <string name="this_field_cannot_be_empty">This field cannot be empty</string>
     <string name="request_sent_successfully">Request sent Successfully</string>
     <string name="your_request_was_not_sent_please_try_again_later">Your request was not sent, please try again later</string>
-    <string name="this_number_is_already_registered_try_to_log_in">This number is already registered,try to log in</string>
+    <string name="this_number_is_already_registered_try_to_log_in">This number is already registered, try to log in</string>
     <string name="this_number_is_not_registered_try_to_register">This number is not registered, try to register</string>
     <string name="the_verification_code_is_invalid">The verification code from SMS/TOTP is invalid, Please check and enter the correct verification code again.</string>
     <string name="an_error_occurred_try_again_later">An error occurred, try again later</string>
+    <string name="logged_in_successfully">Logged in successfully</string>
+    <string name="successfully_registered">successfully registered</string>
+    <string name="_question_mark">\?</string>
 
 
 </resources>
