--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,16 +22,16 @@
     <string name="city">City</string>
     <string name="area">Area</string>
     <string name="address">Address</string>
-    <string name="phone">Phone</string>
+    <string name="phone">Phone Number</string>
     <string name="bias1">1.0</string>
     <string name="bias0">0.0</string>
     <string name="enter_your_name">Enter your Name</string>
     <string name="enter_your_address">Enter your ِAddress</string>
     <string name="enter_phone">Enter your Phone Number</string>
-    <string name="lenght_phone_check">Enter 11 num Phone </string>
+    <string name="length_phone_check">Enter 11 num Phone </string>
     <string name="verification_code">Verification Code</string>
     <string name="code_sent">code sent to </string>
-    <string name="contian_11">Must Contain 11 Number</string>
+    <string name="contain_11">Must Contain 11 Number</string>
     <string name="signout">signOut</string>
     <string name="verify_code">Verify Code</string>
     <string name="please_enter_code">Please enter Code</string>
